--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>hi</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
+    <title>Java Loco</title>
+</head>
+<body>
+    <h1>header</h1>
+</body>
+</html>
