--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>Java Loco - Home</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="/#header">Home</a></li>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Menu/menu.html">Menu</a></li>
-                <li><a href="/Locations/locations.html">Locations</a></li>
-                <li><a href="/Order/order.html">Order Now</a></li>
-                <li><a href="/#contact">Contact Us</a></li>
-            </ul>
-        </nav>
-    </div>
+<div class="header-section">
+    <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="/#header">Home</a></li>
+                    <li><a href="/About/about.html">About</a></li>
+                    <li><a href="/Menu/menu.html">Menu</a></li>
+                    <li><a href="/Locations/locations.html">Locations</a></li>
+                    <li><a href="/Checkout/checkout.html">Checkout</a></li>
+                    <li><a href="/#contact">Contact Us</a></li>
+                </ul>
+            </nav>
+        <div class="header-text">
+            <h1>Order our Coffee Now!</h1>
+    
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolores a nim aliquid officiis aut quam.</p>
+            <button class="btn-white">Order here</button>
+        </div>
+    </div>   
+</div>
 </body>
 </html>
