added features to about and location pages

--- a/Locations/locations.html
+++ b/Locations/locations.html
@@ -2,9 +2,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./locations.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <title>Java Loco - Locations</title>
 </head>
 <body>
-    
+    <div class="locations-header">
+        <div class="container">
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="/#header">Home</a></li>
+                        <li><a href="/About/about.html">About</a></li>
+                        <li><a href="/Menu/menu.html">Menu</a></li>
+                        <li><a href="/Locations/locations.html">Locations</a></li>
+                        <li><a href="/Checkout/checkout.html">Checkout</a></li>
+                        <li><a href="/#contact">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="l-header-text">
+                <h1>Check out or Locations</h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-sect">
+        <div class="container">
+            <h1 class="sub-head">Locations</h1>
+
+            <div class="location-container">
+                <div class="search-bar">
+                    <span>Find the nearest location</span>
+                    <input type="search" name="" id="" placeholder="Postal/Zip Code">
+                    <span>Distance</span>
+                    <select name="zip-code" id="zip-code">
+                        <option value="5">5 mi</option>
+                        <option value="10">10 mi</option>
+                        <option value="20">15 mi</option>
+                        <option value="20">20 mi</option>
+                    </select>
+                    <span>Results</span>
+                    <select name="distance" id="distance">
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                    </select>
+                    <button>Search</button>
+                </div>
+
+                <div class="map-integration">
+                    <div class="side-bar">
+                        <div class="bar">
+                            <div class="box-title">
+                                <i class="fa-solid fa-map-pin"></i><h2>Alexandria Location</h2>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit alam</p>
+                        </div>
+                        <hr class="line-bar">
+                        <div class="bar">
+                            <div class="box-title">
+                                <i class="fa-solid fa-map-pin"></i><h2>Alexandria Location</h2>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit alam</p>
+                        </div>
+                        <hr class="line-bar">
+                        <div class="bar">
+                            <div class="box-title">
+                                <i class="fa-solid fa-map-pin"></i><h2>Falls Church Location</h2>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit alam</p>
+                        </div>
+                        <hr class="line-bar">
+                        <div class="bar">
+                            <div class="box-title">
+                                <i class="fa-solid fa-map-pin"></i><h2>Falls Church Location</h2>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit alam</p>
+                        </div>
+                        <hr class="line-bar">
+                    </div>
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90121.44184982729!2d-77.15179818249982!3d38.73829887078298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7af92785c7185%3A0xca668c7542439ac2!2sJava%20Loco%20Coffee%20%26%20Bubble%20Tea%20-%20Mt%20Vernon!5e1!3m2!1sen!2sus!4v1724631601058!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="top">
+                <nav>
+                    <ul>
+                        <li><li><a href="/#header">Home</a></li>
+                        <li><a href="/About/about.html">About</a></li>
+                        <li><a href="/Menu/menu.html">Menu</a></li>
+                        <li><a href="/Locations/locations.html">Locations</a></li>
+                        <li><a href="/Checkout/checkout.html">Checkout</a></li>
+                        <li><a href="/#contact">Contact Us</a></li></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="bottom">
+                <div class="social-brands">
+                    <a href="https://facebook.com"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                </div>
+                <div class="copyright">
+                    <p>©️ 2024 Java Loco. All rights reserved.</p>
+                    <div class="terms">
+                        <p>Terms & Conditions</p>
+                        <p>Return Policy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
