--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -57,22 +57,22 @@
                         <tr>
                             <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
                             <td>Green Tea</td>
-                            <td>0 cal</td>
+                            <td class="cals">0-2</td>
                         </tr>
                         <tr>
                             <td><img src="/Images/tea-2.png" alt="Product Image"></td>
                             <td>Black Tea</td>
-                            <td>2 cal</td>
+                            <td class="cals">2-5</td>
                         </tr>
                         <tr>
                             <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
                             <td>Oolong Tea</td>
-                            <td class="cals">4 cal</td>
+                            <td class="cals">4-15</td>
                         </tr>
                         <tr>
                             <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
                             <td>Chamomile Tea</td>
-                            <td class="cals">1 cal</td>
+                            <td class="cals">1-3</td>
                         </tr>
                     </tbody>
                 </table>
@@ -92,24 +92,24 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
-                            <td>Green Tea</td>
-                            <td class="cals">0 cal</td>
+                            <td><img src="/Images/coffee-1.jpg" alt="Product Image"></td>
+                            <td>Black Coffee</td>
+                            <td class="cals">2-5</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-2.png" alt="Product Image"></td>
-                            <td>Black Tea</td>
-                            <td class="cals">2 cal</td>
+                            <td><img src="/Images/coffee-2.jpg" alt="Product Image"></td>
+                            <td>Latte</td>
+                            <td class="cals">170-220</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
-                            <td>Oolong Tea</td>
-                            <td class="cals">4 cal</td>
+                            <td><img src="/Images/coffee-3.jpg" alt="Product Image"></td>
+                            <td>Cappuccino</td>
+                            <td class="cals">130-180</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
-                            <td>Chamomile Tea</td>
-                            <td class="cals">1 cal</td>
+                            <td><img src="/Images/coffee-4.jpeg" alt="Product Image"></td>
+                            <td>Americano</td>
+                            <td class="cals">5-15</td>
                         </tr>
                     </tbody>
                 </table>
@@ -129,24 +129,24 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
-                            <td>Green Tea</td>
-                            <td class="cals">0 cal</td>
+                            <td><img src="/Images/frappe-1.jpg" alt="Product Image"></td>
+                            <td>Mocha Frappe</td>
+                            <td class="cals">500-550</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-2.png" alt="Product Image"></td>
-                            <td>Black Tea</td>
-                            <td class="cals">2 cal</td>
+                            <td><img src="/Images/frappe-2.jpg" alt="Product Image"></td>
+                            <td>Caramel Frappe</td>
+                            <td class="cals">480-530</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
-                            <td>Oolong Tea</td>
-                            <td class="cals">4 cal</td>
+                            <td><img src="/Images/frappe-3.jpg" alt="Product Image"></td>
+                            <td>Vanilla Frappe</td>
+                            <td class="cals">450-500</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
-                            <td>Chamomile Tea</td>
-                            <td class="cals">1 cal</td>
+                            <td><img src="/Images/frappe-4.jpg" alt="Product Image"></td>
+                            <td>Chocolate Frappe</td>
+                            <td class="cals">510-560</td>
                         </tr>
                     </tbody>
                 </table>
@@ -166,24 +166,24 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
-                            <td>Green Tea</td>
-                            <td class="cals">0 cal</td>
+                            <td><img src="/Images/boba-1.jpg" alt="Product Image"></td>
+                            <td>Classic Milk Tea</td>
+                            <td class="cals">320-380</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-2.png" alt="Product Image"></td>
-                            <td>Black Tea</td>
-                            <td class="cals">2 cal</td>
+                            <td><img src="/Images/boba-2.jpg" alt="Product Image"></td>
+                            <td>Taro Milk Tea</td>
+                            <td class="cals">400-450</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
-                            <td>Oolong Tea</td>
-                            <td class="cals">4 cal</td>
+                            <td><img src="/Images/boba-3.jpg" alt="Product Image"></td>
+                            <td>Matcha Boba Tea</td>
+                            <td class="cals">350-400</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
-                            <td>Chamomile Tea</td>
-                            <td class="cals">1 cal</td>
+                            <td><img src="/Images/boba-4.jpg" alt="Product Image"></td>
+                            <td>Brown Sugar Boba</td>
+                            <td class="cals">420-480</td>
                         </tr>
                     </tbody>
                 </table>
@@ -203,24 +203,24 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
-                            <td>Green Tea</td>
-                            <td class="cals">0 cal</td>
+                            <td><img src="/Images/pas-1.jpg" alt="Product Image"></td>
+                            <td>Croissant</td>
+                            <td class="cals">260-300</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-2.png" alt="Product Image"></td>
-                            <td>Black Tea</td>
-                            <td class="cals">2 cal</td>
+                            <td><img src="/Images/pas-2.jpg" alt="Product Image"></td>
+                            <td>Muffin</td>
+                            <td class="cals">450-490</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
-                            <td>Oolong Tea</td>
-                            <td class="cals">4 cal</td>
+                            <td><img src="/Images/pas-3.jpg" alt="Product Image"></td>
+                            <td>Cookies</td>
+                            <td class="cals">300-450</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
-                            <td>Chamomile Tea</td>
-                            <td class="cals">1 cal</td>
+                            <td><img src="/Images/pas-4.jpg" alt="Product Image"></td>
+                            <td>Macaroons</td>
+                            <td class="cals">330-380</td>
                         </tr>
                     </tbody>
                 </table>
