--- a/Locations/locations.html
+++ b/Locations/locations.html
@@ -25,7 +25,7 @@
                 </nav>
             </div>
             <div class="l-header-text">
-                <h1>Check out or Locations</h1>
+                <h1>Check our Locations</h1>
             </div>
         </div>
     </div>
