feat: improved navigation

--- a/About/about.html
+++ b/About/about.html
@@ -69,7 +69,7 @@
                 <div class="cta">
                     <p>Want to support us? Join our community today!</p>
                     <div class="btn-div">
-                        <button class="join-btn">Join Now</button>
+                        <a href="/index.html#contact" class="join-btn">Join Now</a>
                     </div>
                 </div>
 
