--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="review-order-sect">
+    <div class="review-order-sect" id="review-order">
         <div class="container">
             <div class="ck-title">
                 <h1>Review Order</h1>
@@ -90,11 +90,11 @@
 
             <div class="bottom-btns">
                 <div class="c-o">
-                    <button class="complete-order">Complete Order</button>
+                    <a class="complete-order">Complete Order</a>
                 </div>
     
                 <div class="c-s">
-                    <button class="continue-shopping">Continue Shopping</button>
+                    <a href="/Menu/menu.html#menu-section" class="continue-shopping">Continue Shopping</a>
                 </div>
             </div>
         </div>
