--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -30,8 +30,8 @@
     </div>   
 </div>
 
-<div class="container">
-    <div class="middle-container">
+<div class="menu-section" id="menu-section">
+    <div class="container">
         <h1>Menu</h1>
         <div class="tab-titles">
             <ul>
@@ -227,7 +227,8 @@
             </div>
         </div>
     </div>
-    <button class="btn-black">Proceed to Checkout</button>
+    
+    <a href="/Checkout/checkout.html#review-order" class="btn-black">Proceed to Checkout</a>
     </div>          
     </div>       
 </div>
