--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="/#header">Home</a></li>
-                    <li><a href="/About/about.html">About</a></li>
+                    <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
                     <li><a href="/Menu/menu.html">Menu</a></li>
                     <li><a href="/Locations/locations.html">Locations</a></li>
                     <li><a href="/Checkout/checkout.html">Checkout</a></li>
