fix: addressed anchor navigation

--- a/About/about.html
+++ b/About/about.html
@@ -16,12 +16,12 @@
             <div>
                 <nav>
                     <ul>
-                        <li><a href="/#header">Home</a></li>
-                        <li><a href="/About/about.html">About</a></li>
-                        <li><a href="/Menu/menu.html">Menu</a></li>
-                        <li><a href="/Locations/locations.html">Locations</a></li>
-                        <li><a href="/Checkout/checkout.html">Checkout</a></li>
-                        <li><a href="/#contact">Contact Us</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -69,7 +69,7 @@
                 <div class="cta">
                     <p>Want to support us? Join our community today!</p>
                     <div class="btn-div">
-                        <a href="/index.html#contact" class="join-btn">Join Now</a>
+                        <a href="https://andreschoque3.github.io/Coffee_website/index.html#contact" class="join-btn">Join Now</a>
                     </div>
                 </div>
 
@@ -83,12 +83,12 @@
             <div class="top">
                 <nav>
                     <ul>
-                        <li><li><a href="/#header">Home</a></li>
-                        <li><a href="/About/about.html">About</a></li>
-                        <li><a href="/Menu/menu.html">Menu</a></li>
-                        <li><a href="/Locations/locations.html">Locations</a></li>
-                        <li><a href="/Checkout/checkout.html">Checkout</a></li>
-                        <li><a href="/#contact">Contact Us</a></li></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li></li>
                     </ul>
                 </nav>
             </div>
