fix: home and menu images

--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -92,22 +92,22 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/coffee-1.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/coffee-1.jpg" alt="Product Image"></td>
                             <td>Black Coffee</td>
                             <td class="cals">2-5</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/coffee-2.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/coffee-2.jpg" alt="Product Image"></td>
                             <td>Latte</td>
                             <td class="cals">170-220</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/coffee-3.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/coffee-3.jpg" alt="Product Image"></td>
                             <td>Cappuccino</td>
                             <td class="cals">130-180</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/coffee-4.jpeg" alt="Product Image"></td>
+                            <td><img src="../Images/coffee-4.jpeg" alt="Product Image"></td>
                             <td>Americano</td>
                             <td class="cals">5-15</td>
                         </tr>
@@ -129,22 +129,22 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/frappe-1.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/frappe-1.jpg" alt="Product Image"></td>
                             <td>Mocha Frappe</td>
                             <td class="cals">500-550</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/frappe-2.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/frappe-2.jpg" alt="Product Image"></td>
                             <td>Caramel Frappe</td>
                             <td class="cals">480-530</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/frappe-3.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/frappe-3.jpg" alt="Product Image"></td>
                             <td>Vanilla Frappe</td>
                             <td class="cals">450-500</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/frappe-4.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/frappe-4.jpg" alt="Product Image"></td>
                             <td>Chocolate Frappe</td>
                             <td class="cals">510-560</td>
                         </tr>
@@ -166,22 +166,22 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/boba-1.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/boba-1.jpg" alt="Product Image"></td>
                             <td>Classic Milk Tea</td>
                             <td class="cals">320-380</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/boba-2.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/boba-2.jpg" alt="Product Image"></td>
                             <td>Taro Milk Tea</td>
                             <td class="cals">400-450</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/boba-3.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/boba-3.jpg" alt="Product Image"></td>
                             <td>Matcha Boba Tea</td>
                             <td class="cals">350-400</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/boba-4.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/boba-4.jpg" alt="Product Image"></td>
                             <td>Brown Sugar Boba</td>
                             <td class="cals">420-480</td>
                         </tr>
@@ -203,22 +203,22 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/pas-1.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/pas-1.jpg" alt="Product Image"></td>
                             <td>Croissant</td>
                             <td class="cals">260-300</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/pas-2.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/pas-2.jpg" alt="Product Image"></td>
                             <td>Muffin</td>
                             <td class="cals">450-490</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/pas-3.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/pas-3.jpg" alt="Product Image"></td>
                             <td>Cookies</td>
                             <td class="cals">300-450</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/pas-4.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/pas-4.jpg" alt="Product Image"></td>
                             <td>Macaroons</td>
                             <td class="cals">330-380</td>
                         </tr>
@@ -238,13 +238,13 @@
         <h1>Place a Mobile Order</h1>
         <div class="delivery">
             <div class="grub-hub">
-                <a href="https://www.grubhub.com"><img src="/Images/gh-logo.png" height="60px" width="120px"></a>
+                <a href="https://www.grubhub.com"><img src="../Images/gh-logo.png" height="60px" width="120px"></a>
             </div>
             <div class="uber-eats">
-                <a href="https://www.ubereats.com"><img src="/Images/ue-logo.png" height="60px" width="120px" ></a>
+                <a href="https://www.ubereats.com"><img src="../Images/ue-logo.png" height="60px" width="120px" ></a>
             </div>
             <div class="door-dash">
-                <a href="https://www.doordash.com"><img src="/Images/dd-logo.jpg" height="60px" width="120px"></a>
+                <a href="https://www.doordash.com"><img src="../Images/dd-logo.jpg" height="60px" width="120px"></a>
             </div>
         </div>
     
