--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="slider-wrapper">
                 <div class="card-list swiper-wrapper">
                     <div class="card-item swiper-slide">
-                        <img id='slide-1' src="/Images/carousel-outside.jpg" height="411" width="720">
+                        <img id='slide-1' src="./Images/carousel-outside.jpg" height="411" width="720">
                     </div>
                     <div class="card-item swiper-slide">
-                        <img id='slide-2' src="/Images/carousel-food.jpeg" height="411" width="720">
+                        <img id='slide-2' src="./Images/carousel-food.jpeg" height="411" width="720">
                     </div>
                     <div class="card-item swiper-slide">
-                        <img id='slide-3' src="/Images/carousel-shop.jpg" height="411" width="720">   
+                        <img id='slide-3' src="./Images/carousel-shop.jpg" height="411" width="720">   
                     </div>
                  </div>
                  <!-- if needed later -->
@@ -67,7 +67,7 @@
             </p>
         </div>
         <div class="boba-img-col">
-            <img src="Images/boba_landscape.png" alt="Boba landscape">
+            <img src="./Images/boba_landscape.png" alt="Boba landscape">
         </div>
     </div>
     
