fix: menu page tea images

--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -55,22 +55,22 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/Images/tea-1.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/tea-1.jpg" alt="Product Image"></td>
                             <td>Green Tea</td>
                             <td class="cals">0-2</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-2.png" alt="Product Image"></td>
+                            <td><img src="../Images/tea-2.png" alt="Product Image"></td>
                             <td>Black Tea</td>
                             <td class="cals">2-5</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-3.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/tea-3.jpg" alt="Product Image"></td>
                             <td>Oolong Tea</td>
                             <td class="cals">4-15</td>
                         </tr>
                         <tr>
-                            <td><img src="/Images/tea-4.jpg" alt="Product Image"></td>
+                            <td><img src="../Images/tea-4.jpg" alt="Product Image"></td>
                             <td>Chamomile Tea</td>
                             <td class="cals">1-3</td>
                         </tr>
