--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="/Images/java-loco-small.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,12 +25,12 @@
                     <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
                 </ul>
             </nav>
-        <div class="header-text">
-            <h1>Order our Coffee Now!</h1>
-    
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolores a nim aliquid officiis aut quam.</p>
-            <a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html#review-order" class="btn-white">Check Out</a>
-        </div>
+            <div class="header-text">
+                <h1>Order our Coffee Now!</h1>
+        
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolores a nim aliquid officiis aut quam.</p>
+                <a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html#review-order" class="btn-white">Check Out</a>
+            </div>
     </div>   
 </div>
 
