feat: Initial join page complete

--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -23,6 +23,7 @@
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -112,6 +113,7 @@
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
                     </ul>
                 </nav>
             </div>
