--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
                     <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
                     <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
+                    <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -106,6 +107,7 @@
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
                         <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
+                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
                     </li>
                 </ul>
             </nav>
