feat: improved form

--- a/Join/join.html
+++ b/Join/join.html
@@ -31,21 +31,24 @@
     </div>   
 </div>
 
+
+<div class="middle-join-section">
     <div class="container">
-        <div class="flex-container">
-            <div class="boba-text-col">
+        <div class="why-join-flex">
+            <div class="flex-join-text-col">
                 <h1>Why Join Us?</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero error amet quam tempora consequatur quasi, saepe ut,                 </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero error amet quam tempora consequatur quasi.</p>
             </div>
-            <div class="boba-img-col">
-                <img src="../Images/join-landscape.jpg" alt="Boba landscape">
+            <div class="flex-join-img-col">
+                <img src="../Images/join-landscape.jpg" alt="flex-join landscape">
             </div>
         </div>   
-    </div>   
+    </div>
+</div>   
 
 
 
-<div class="join-container">
+<div class="join-form-section">
     <div class="container">
         <h1>Team Form</h1>
         <div class="contact-form">
