--- a/Login/login.html
+++ b/Login/login.html
@@ -9,12 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Java Loco - Join Us</title>
+    <title>Login - Java Loco</title>
 </head>
 <body>
 <div class="header-section">
         <div class="logo-btn">
-            <!-- <i class="fa-solid fa-arrow-left" id="back-btn"></i> -->
             <img src="../Images/Java-Loco.png"><a href="https://andreschoque3.github.io/Coffee_website/#header"></a></img>
         </div>
         <div class="login">
@@ -22,7 +21,7 @@
                     <form action="">
                         <h1>Login</h1>
                         <div class="input-box">
-                            <input class="input-bar" type="text" placeholder="Username" required>
+                            <input class="input-bar" type="email" placeholder="Email" required>
                             <i class="fa-solid fa-user"></i>
                         </div>
                         <div class="input-box">
@@ -35,13 +34,12 @@
                                 <input type="checkbox" id="rem-check">
                             <label for="rem-check">Remember Me</label>
                             </div>
-                            
                             <a href="#">Forgot password?</a>
                         </div>
                         <button type="submit" class="btn">Login</button>
         
                         <div class="reg-link">
-                            <p>Don't have an account? <a href="#">Register</a></p>
+                            <p>Don't have an account? Register<a href="#"> Here</a></p>
                         </div>
                     </form>
                 </div>
