--- a/About/about.html
+++ b/About/about.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/Images/java-loco-small.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Java Loco - About</title>
 </head>
@@ -42,7 +42,7 @@
                     <h1 class="box-1">First Blend</h1>
                     <div class="box-content">
                         <img src="../Images/about-m1.jpg" alt="">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ea soluta, quasi error harum explicabo voluptatum sint distinctio corporis ullam ad commodi fugit? Omnis, consequatur. Voluptatum ab quasi ullam quisquam.</p>
+                        <p>Java Loco started as a single coffee cart on a quiet corner in 2003, brewing just a few varieties of coffee sourced from a small, family-run farm in Colombia. The goal was simple: to serve exceptional coffee and create a welcoming spot for coffee lovers.</p>
                     </div>
                 </div>
 
@@ -52,7 +52,7 @@
                     <h1 class="box-2">Present Chapter</h1>
                     <div class="box-content">
                         <img src="../Images/about-m2.jpg" alt="">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ea soluta, quasi error harum explicabo voluptatum sint distinctio corporis ullam ad commodi fugit? Omnis, consequatur. Voluptatum ab quasi ullam quisquam.</p>
+                        <p>Today, Java Loco has expanded to multiple locations across the city, each one preserving the charm and warmth of the original. With an experienced team of baristas and a constantly evolving menu, Java Loco continues to serve carefully crafted products.</p>
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
                     <h1 class="box-1">Next Steps</h1>
                     <div class="box-content">
                         <img src="../Images/about-m3.jpg" alt="">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ea soluta, quasi error harum explicabo voluptatum sint distinctio corporis ullam ad commodi fugit? Omnis, consequatur. Voluptatum ab quasi ullam quisquam.</p>
+                        <p>Looking to the future, Java Loco aims to deepen its roots in the community while exploring new ways to innovate. Plans are in motion to open a few more locations, each with a slightly unique vibe to fit the neighborhood. Java Loco also hopes to launch a line of bottled cold brews and introduce virtual coffee-making classes to bring the Java Loco experience into homes.</p>
                     </div>
                 </div>
 
@@ -85,13 +85,15 @@
             <div class="top">
                 <nav>
                     <ul>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                        <li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -104,10 +106,10 @@
                 </div>
                 <div class="copyright">
                     <p>©️ 2024 Java Loco. All rights reserved.</p>
-                    <div class="terms">
-                        <p>Terms & Conditions</p>
-                        <p>Return Policy</p>
-                    </div>
+                </div>
+                <div class="terms">
+                    <p>Terms & Conditions</p>
+                    <p>Return Policy</p>
                 </div>
             </div>
         </div>
