--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -107,13 +107,15 @@
             <div class="top">
                 <nav>
                     <ul>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                        <li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
+                            <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -126,10 +128,10 @@
                 </div>
                 <div class="copyright">
                     <p>©️ 2024 Java Loco. All rights reserved.</p>
-                    <div class="terms">
-                        <p>Terms & Conditions</p>
-                        <p>Return Policy</p>
-                    </div>
+                </div>
+                <div class="terms">
+                    <p>Terms & Conditions</p>
+                    <p>Return Policy</p>
                 </div>
             </div>
         </div>
