--- a/Join/join.html
+++ b/Join/join.html
@@ -32,12 +32,15 @@
 </div>
 
 
-<div class="middle-join-section">
+<div class="middle-sect">
     <div class="container">
         <div class="why-join-flex">
             <div class="flex-join-text-col">
                 <h1>Why Join Us?</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero error amet quam tempora consequatur quasi.</p>
+                <p>Join our team at Java Loco and be part of a community that brews more than just coffee! We’re passionate 
+                    about creating a welcoming atmosphere for our customers while fostering a supportive environment for our staff. 
+                    As a team member, you’ll enhance your barista skills, connect with coffee lovers, and contribute to a vibrant 
+                    local culture.</p>
             </div>
             <div class="flex-join-img-col">
                 <img src="../Images/join-landscape.jpg" alt="flex-join landscape">
