--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
             <div class="header-text">
                 <h1>Order our Coffee Now!</h1>
-                <p>Experience the rich, aromatic flavors of our freshly brewed coffee. Each cup is crafted with passion, delivering a perfect balance of taste and comfort.</p>
+                <p>Experience the rich, aromatic flavors of our freshly brewed coffee.</p>
                 <a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html#review-order" class="btn-white">Check Out</a>
             </div>
     </div>   
