--- a/Login/login.html
+++ b/Login/login.html
@@ -13,10 +13,7 @@
 </head>
 <body>
 <div class="header-section">
-        <div class="logo-btn">
-            <img src="../Images/Java-Loco.png"><a href="https://andreschoque3.github.io/Coffee_website/#header"></a></img>
-        </div>
-        <div class="login">
+        <div class="login" id="login-form">
                 <div class="wrapper">
                     <form action="">
                         <h1>Login</h1>
@@ -25,7 +22,7 @@
                             <i class="fa-solid fa-user"></i>
                         </div>
                         <div class="input-box">
-                            <input class="input-bar" id="password" type="password" placeholder="Password" required />
+                            <input class="input-bar" id="password" type="password" placeholder="Password" required/>
                                 <i class="fa-solid fa-eye-slash" id="toggle-pass"></i>
                                 <i class="fa-solid fa-eye" id="hide-pass" style="display: none;"></i>
                         </div>
@@ -39,31 +36,101 @@
                         <button type="submit" class="btn">Login</button>
         
                         <div class="reg-link">
-                            <p>Don't have an account? Register<a href="#"> Here</a></p>
+                            <p>Don't have an account? Register <a href="#" id="show-register">Here</a></p>
                         </div>
                     </form>
                 </div>
         </div> 
+
+        <div class="register" id="register-form" style="display: none;">
+            <div class="wrapper">
+                <form action="">
+                    <h1>Register</h1>
+                    <div class="input-box">
+                        <input class="input-bar" type="text" placeholder="Name" required>
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="input-box">
+                        <input class="input-bar" type="email" placeholder="Email" required>
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="input-box">
+                        <input class="input-bar" type="password" placeholder="Password" required>
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    
+                    <div class="input-box">
+                        <input class="input-bar" id="register-password" type="password" placeholder="Confirm password" required/>
+                        <i class="fa-solid fa-eye-slash" id="register-toggle-pass"></i>
+                        <i class="fa-solid fa-eye" id="register-hide-pass" style="display: none;"></i>
+                    </div>
+                    <div class="rem-for">
+                        <div class="checkbox-label">
+                            <input type="checkbox" id="rem-check">
+                        <label for="rem-check">Remember Me</label>
+                        </div>
+                        <a href="#">Forgot password?</a>
+                    </div>
+                    <button type="submit" class="btn">Login</button>
+                     <div class="log-link">
+                        <p>Already have an account? Login <a href="#" id="show-login">Here</a></p>
+                    </div>
+                </form>
+            </div>
+        </div>
 </div>   
 
 
 <script>
-    const passwordInput = document.getElementById('password');
-    const togglePass = document.getElementById('toggle-pass');
-    const hidePass = document.getElementById('hide-pass');
-    const backBtn = document.getElementById('back-btn');
+const loginPasswordInput = document.getElementById('password');
+const loginTogglePass = document.getElementById('toggle-pass');
+const loginHidePass = document.getElementById('hide-pass');
 
-togglePass.addEventListener('click', function () {
-    passwordInput.setAttribute('type', 'text');
-    togglePass.style.display = 'none';
-    hidePass.style.display = 'block';
+loginTogglePass.addEventListener('click', function () {
+    loginPasswordInput.setAttribute('type', 'text');
+    loginTogglePass.style.display = 'none';
+    loginHidePass.style.display = 'block';
 });
 
-hidePass.addEventListener('click', function () {
-    passwordInput.setAttribute('type', 'password');
-    hidePass.style.display = 'none';
-    togglePass.style.display = 'block';
+loginHidePass.addEventListener('click', function () {
+    loginPasswordInput.setAttribute('type', 'password');
+    loginHidePass.style.display = 'none';
+    loginTogglePass.style.display = 'block';
 });
+
+const registerPasswordInput = document.getElementById('register-password');
+const registerTogglePass = document.getElementById('register-toggle-pass');
+const registerHidePass = document.getElementById('register-hide-pass');
+
+registerTogglePass.addEventListener('click', function () {
+    registerPasswordInput.setAttribute('type', 'text');
+    registerTogglePass.style.display = 'none';
+    registerHidePass.style.display = 'block';
+});
+
+registerHidePass.addEventListener('click', function () {
+    registerPasswordInput.setAttribute('type', 'password');
+    registerHidePass.style.display = 'none';
+    registerTogglePass.style.display = 'block';
+});
+
+const loginForm = document.getElementById('login-form');
+const registerForm = document.getElementById('register-form');
+const showRegisterLink = document.getElementById('show-register');
+const showLoginLink = document.getElementById('show-login');
+
+showRegisterLink.addEventListener('click', (e) => {
+    e.preventDefault();
+    loginForm.style.display = 'none';
+    registerForm.style.display = 'flex';
+});
+
+showLoginLink.addEventListener('click', (e) => {
+    e.preventDefault();
+    registerForm.style.display = 'none';
+    loginForm.style.display = 'flex';
+});
+
 </script>
 </body>
 </html>
