--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
                     <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
                     <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
-                    <a class="btn-white" id="login" href="./Coffee_website/Login/login.html">Login</a>
+                    <a class="btn-white" id="login" href="https://andreschoque3.github.io/Coffee_website/Login/login.html">Login</a>
                 </ul>
             </nav>
             <div class="header-text">
