fix: hyperlink issue

--- a/Locations/locations.html
+++ b/Locations/locations.html
@@ -16,13 +16,13 @@
             <div>
                 <nav>
                     <ul>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
-                        <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../About/about.html">About</a></li>
+                        <li><a href="../Menu/menu.html">Menu</a></li>
+                        <li><a href="../Locations/locations.html">Locations</a></li>
+                        <li><a href="../Checkout/checkout.html">Checkout</a></li>
+                        <li><a href="../#contact">Contact Us</a></li>
+                        <li><a href="../Join/join.html">Join Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -110,13 +110,13 @@
                 <nav>
                     <ul>
                         <li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/#header">Home</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/About/about.html">About</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/Menu/menu.html">Menu</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/Locations/locations.html">Locations</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/Checkout/checkout.html">Checkout</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/#contact">Contact Us</a></li>
-                            <li><a href="https://andreschoque3.github.io/Coffee_website/Join/join.html">Join Us</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../About/about.html">About</a></li>
+                            <li><a href="../Menu/menu.html">Menu</a></li>
+                            <li><a href="../Locations/locations.html">Locations</a></li>
+                            <li><a href="../Checkout/checkout.html">Checkout</a></li>
+                            <li><a href="../#contact">Contact Us</a></li>
+                            <li><a href="../Join/join.html">Join Us</a></li>
                         </li>
                     </ul>
                 </nav>
